# vg-renderer

./: CMakeLists.txt
include/vg/helpers/: vgpp.h
src/: vg.cpp  vg_shader.h
